# igloo-parent

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .travis.yml  Jenkinsfile  README.md  config-test.py  config-test.sh  maven-allure.sh  owasp-suppression-pending.xml  owasp-suppressions-pending.xml  owasp-suppressions.xml  pme.properties  pom.xml
basic-application/: .project  README.md  archetype.properties  build-and-push-archetype.sh  init-git.sh  init-gitlab.sh  init-svn.sh  pom.xml
basic-application/archetype/: rename_archetype_classes.sh
basic-application/basic-application-app/: pom.xml  spring-app.profile
basic-application/basic-application-back/: bindgen.properties  pom.xml
basic-application/basic-application-core/: bindgen.properties  pom.xml
basic-application/basic-application-front/: bindgen.properties  pom.xml
basic-application/basic-application-init/: pom.xml
basic-application/basic-application-static/: basic-application-static.nfpm.yaml  nfpm-wrapper.sh  pom.xml  static.nfpm.yaml
basic-application/basic-application-webapp/: bindgen.properties  pom.xml
basic-application/eclipse/: fix bindings.launch  processor all.launch  processor core.launch  tomcat7.launch  yuicompressor.launch
ci/: artifacts-pull.sh  artifacts-push.sh  config-test.py  maven-allure.sh  maven-dependencies.sh  sonar-branch.py
configuration/: README.txt  archetype.properties  build-and-push-archetype.sh  prepare-artifact.sh
divers/mpxj-example/: .project  pom.xml
docker/: docker-compose.yml
eclipse/: antlr sql statement parser.launch  build-release  functions.sh  install-eclipse-plugins  install-owsi-java-eclipse-plugins  install-owsi-php-eclipse-plugins  processor core all.launch  processor jpa-security.launch  processor jpa.launch  processor wicket-showcase-core.launch  publish-release
eclipse/releases/: 3.6.1
eclipse/tomcat-main/: server.xml
igloo/: pom.xml
igloo/eclipse/: deploy-igloo.launch  fix bindings.launch  processor core all.launch  processor jpa-externallinkchecker.launch  processor jpa-more.launch  processor jpa-security.launch  processor jpa.launch  processor wicket-showcase-core.launch
igloo/igloo-components/: pom.xml
igloo/igloo-dependencies/: pom.xml
igloo/igloo-examples/: pom.xml
igloo/igloo-integration/: pom.xml
igloo/igloo-packages/: pom.xml
owsi/: pom.xml
owsi-core/: pom.xml
owsi-core-0.5-MAINTENANCE/: pom.xml
owsi-core-0.6-MAINTENANCE/: pom.xml
owsi-core-commons/: pom.xml
owsi-core-components/: pom.xml
owsi-core-dependencies/: pom.xml
owsi-core-examples/: pom.xml
owsi-core-export/: pom.xml
owsi-core-hibernate/: pom.xml
owsi-core-packages/: pom.xml
owsi-core-parents/: pom.xml
owsi-core-spring/: pom.xml
owsi-example/: pom.xml
owsi-examples/: pom.xml
templates/: owsi-java-templates.xml  owsi-xml-templates.xml
tools/igloo-project-init/: .gitignore  README.md  igloo_project_init.py  pyproject.toml
tools/igloo-release/: .gitignore  LICENSE.txt  README.md  pyproject.toml
tools/igloo-release/src/igloo_release/: __about__.py  __init__.py  cli.py  command.py  process.py
travis/: postgresql.sql
(+12390 files in other folders)
