[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "igloo-release"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Laurent Almeras", email = "lalmeras@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "aiofiles",
  "termcolor",
  "requests"
]

[project.scripts]
igloo-release = "igloo_release.cli:igloo_release"

[project.urls]
Documentation = "https://github.com/Laurent Almeras/igloo-release#readme"
Issues = "https://github.com/Laurent Almeras/igloo-release/issues"
Source = "https://github.com/Laurent Almeras/igloo-release"

[tool.hatch.version]
path = "src/igloo_release/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/igloo_release tests}"

[tool.coverage.run]
source_pkgs = ["igloo_release", "tests"]
branch = true
parallel = true
omit = [
  "src/igloo_release/__about__.py",
]

[tool.coverage.paths]
igloo_release = ["src/igloo_release", "*/igloo-release/src/igloo_release"]
tests = ["tests", "*/igloo-release/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint.extend-per-file-ignores]
"**" = ["ARG001", "S607", "T201", "FBT002"]